--- a/Lession3/homework/style.css
+++ b/Lession3/homework/style.css
@@ -99,8 +99,11 @@ img {
     font-size: 12px;
     display: inline;
 }
+.tag-name a{
+    display: inline-block;
+}
 .tags-thumbnail{
+    display: inline-block;
     height: 16px;
     width: 11px;
-
 }
