--- a/Lession3/homework/style.css
+++ b/Lession3/homework/style.css
@@ -12,7 +12,6 @@
     align-content: center;
     align-items: center;
     display: flex;
-    flex: none;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 20px;
@@ -24,12 +23,11 @@ img {
     width: 100%;
     height: 100%;
     vertical-align: middle;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 0px;
 }
 .framer-card{
+    object-fit: cover;
+    border-radius: 20px;
+    overflow: visible;
     width: 320px;
     box-shadow:rgba(0, 0, 0, 0.05) 0px 0.796192px 2.38858px -0.625px, rgba(0, 0, 0, 0.05) 0px 2.41451px 7.24352px -1.25px, rgba(0, 0, 0, 0.05) 0px 6.38265px 19.148px -1.875px, rgba(0, 0, 0, 0.05) 0px 20px 60px -2.5px ;
 }
