update css lession 4

--- a/Homework/Lession4/style.css
+++ b/Homework/Lession4/style.css
@@ -20,6 +20,8 @@ img {
     flex-direction: column;
     gap: 100px;
     align-items: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 .section-info{
     padding-left: 40px;
